# knife-4-summer-rs

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: publish-crate.yml
assets/knife4j/: 200.html  404.html  doc.html  index.html
assets/knife4j/_knife4j/: A9VeR0ZX.js  B2P_3VD6.js  BHjZ-_pS.js  BLe2tL3a.js  Bbj9q1LC.js  C6hsSLXp.js  C7UGixey.js  CLxCfj4D.js  CmqLBMfx.js  CqqjR69T.js  Cst-kCNs.js  D4A5QCMZ.js  DEJxurhY.js  DFDjRCQj.js  DHGrVqzg.js  DVY3zSLC.js  DzJs8K2m.js  Knife4jConsole.CtMTJCOh.css  Knife4jConsole.DCSaV9aI.css  Knife4jConsole.css  Knife4jConsole.js  MFHxzKuu.js  MkiIn4SR.js  Pfeuv69D.js  _MQlP1Y7.js  composables.js  doc.html.js  doc.js  e-gYzaDu.js  entry.css  entry.js  error-404.DeGnHQY8.css  error-404.css  error-404.js  error-500.css  error-500.js  error-500.xwd2kq0X.css  index.js  uB67svmW.js  uPQb4wro.js
assets/knife4j/_knife4j/builds/: latest.json
assets/knife4j/_knife4j/builds/meta/: 07a6259f-47d4-4a59-bd4f-ecec7c869707.json  f66d96f5-4c32-42fd-8ee0-bb8966f45629.json  knife4j-static.json
assets/knife4j/doc/: index.html
docs/: knife4j-nuxt-plugin-plan.md
docs/marketing/: README.md
examples/: README.md
examples/aide-axum-example/: Cargo.toml
examples/aide-axum-example/src/: main.rs
examples/petstore-example/: Cargo.toml
examples/petstore-example/src/: main.rs
examples/summer-openapi-example/: Cargo.toml
examples/summer-openapi-example/config/: app.toml
examples/summer-openapi-example/src/: main.rs
frontend/: .prettierignore  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  uno.config.ts
frontend/components/: Knife4jConsole.vue  MethodBadge.vue  SchemaTable.vue
frontend/composables/: useKnife4j.ts
frontend/fixtures/: petstore.json
frontend/pages/: doc.html.vue
frontend/scripts/: sync-assets.mjs
frontend/tests/: brand.test.ts  nuxt-config.test.ts  openapi.test.ts  sync-assets.test.ts
frontend/tests/e2e/: knife4j-parity.spec.ts
frontend/types/: openapi.ts
frontend/utils/: exporters.ts  openapi.ts
src/: lib.rs
tests/: router_contract.rs
